# wg-tracker

./: .gitignore  Cargo.toml  README.md
src/: config.rs  github_schema.graphql  main.rs  repo_config.rs  tracker.rs  util.rs
src/query/: add_issue_comment.graphql  close_issue.graphql  create_issue.graphql  create_label.graphql  issue_comments.graphql  issue_title_and_body.graphql  known_labels.graphql  mod.rs  remove_labels.graphql  repo_id.graphql  updated_issues.graphql
src/state/: current.rs  mod.rs  v1.rs
