[package]
name = "wg-tracker"
version = "0.1.0"
authors = ["Cameron McCormack <cam@mcc.id.au>"]
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.33"
failure = "0.1.5"
failure_derive = "0.1.5"
fs2 = "0.4.3"
graphql_client = "0.7.0"
regex = "1"
lazy_static = "1.3.0"
reqwest = "0.9.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.0"
toml = "0.5.0"
typetag = "0.1"
